pictures to webp and catalog filters update

--- a/styles/sass/_mediaquerys.scss
+++ b/styles/sass/_mediaquerys.scss
@@ -97,6 +97,10 @@
         width: 85vw;
     }
     /* PRODUCTO */
+    .catalogoMenuImagenes{
+        display: flex;
+        flex-direction: column;
+    }
     .productoSeccion{
         grid-template-columns: 1fr 1fr;
     grid-template-rows: 0.1fr 0.1fr 0.1fr 1fr 0.1fr;
