catalog media querys

--- a/styles/sass/_mediaquerys.scss
+++ b/styles/sass/_mediaquerys.scss
@@ -63,9 +63,10 @@
     .catalogoTarjetas .tarjeta{
         margin: 0.5rem 0.5rem;
     }
-    .catalogoTarjetas{
+    .catalogoMenuImagenes .catalogoTarjetas{
         margin-bottom: 3rem;
         justify-content: space-around;
+        padding: 2rem;
     }
     .filtroLateralCatalogo{
         padding: 1rem 1rem 0 2rem;
@@ -111,6 +112,13 @@
     "usos caracteristicas "
     "imagen imagen  "
     "comprar comprar ";
+    }
+}
+
+@media screen and (max-width: 520px) {
+    .catalogoMenuImagenes .catalogoTarjetas{
+        margin-bottom: 1rem;
+        padding: 0.5rem;
     }
 }
 /* PHONE */
