boucle @ navbar & catalog

--- a/styles/sass/_base.scss
+++ b/styles/sass/_base.scss
@@ -4,6 +4,7 @@
 // Generales
 * {
     font-family: 'Quicksand','Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-display: swap
 }
 
 body{
