--- a/styles/sass/_animations.scss
+++ b/styles/sass/_animations.scss
@@ -7,6 +7,7 @@
 .roll-in-left {
     -webkit-animation: roll-in-left 0.6s ease-out both;
         animation: roll-in-left 0.6s ease-out both;
+        animation-delay: 1.5s;
 }
 @-webkit-keyframes roll-in-left {
     0% {
@@ -36,6 +37,7 @@
 .roll-in-right {
 	-webkit-animation: roll-in-right 0.6s ease-out both;
 	    animation: roll-in-right 0.6s ease-out both;
+      animation-delay: 1.5s;
 }
  @-webkit-keyframes roll-in-right {
     0% {
@@ -119,3 +121,65 @@
               transform: translate(0);
     }
   }
+
+.fade-in {
+  -webkit-animation: fade-in 1.2s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+          animation: fade-in 1.2s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
+}
+
+@-webkit-keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@for $appear from 1 through 24{
+  .catalogoTarjetas div:nth-child(#{$appear}){
+    animation-delay: $appear * 0.1s;
+  }
+}
+
+.text-focus-in {
+	-webkit-animation: text-focus-in 0.8s cubic-bezier(0.550, 0.085, 0.680, 0.530) 0.2s both;
+	        animation: text-focus-in 0.8s cubic-bezier(0.550, 0.085, 0.680, 0.530) 0.2s both;
+}
+
+@-webkit-keyframes text-focus-in {
+  0% {
+    -webkit-filter: blur(12px);
+            filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-filter: blur(0px);
+            filter: blur(0px);
+    opacity: 1;
+  }
+}
+@keyframes text-focus-in {
+  0% {
+    -webkit-filter: blur(12px);
+            filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-filter: blur(0px);
+            filter: blur(0px);
+    opacity: 1;
+  }
+}
+@for $navappear from 1 through 4 {
+  .navbar-nav li:nth-child(#{$navappear}){
+    animation-delay: $navappear * 0.1s;
+  }
+}
